2012-04-21  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/bmc-watchdog.c (_daemon_cmd): Handle SIGQUIT in
	addition to SIGTERM and SIGINT.  Code cleanup.
	
2012-04-19  Albert Chu <chu11@llnl.gov>

	Merge branch intels2600jf

	* ipmi-oem/: Add Intel --get-power-restore-delay,
	--set-power-restore-delay, --get-bmc-service-status,
	--set-bmc-service-status.

	* libfreeipmi/include/freeipmi/spec/, libfreeipmi/sel-parse/:
	Re-arch SEL OEM interpretations of Quanta QSSC-S4R/Appro GB812X-CN
	to prepare for Intel S2600JF/Appro 512X.  Add QPI Interconnect
	specific event offset messages.

	* libfreeipmi/sel-parse/: Support Intel S2600JF/Appro 512X OEM SEL
	events.

	* libfreeipmi/include/: Add additions for Intel S2600JF/Appro 512x

	* man/: Update documentation for Intel S2600JF/Appro 512x support.
	
2012-04-16  Albert Chu <chu11@llnl.gov>

	Merge reservedmacros branch.

	Fix bug #36177: reserved identifier violation.

	See https://www.securecoding.cert.org/confluence/display/seccode/DCL37-C.+Do+not+declare+or+define+a+reserved+identifier

	* Rename many header guards for compliance.

	* Fix inconsistencies with header guards #defines and #endif
	comments.

	* Rename many macros for safety.
	
	* Fix file scope object naming issues.

	* Make some variables static that should be file local. 

2012-03-20  Albert Chu <chu11@llnl.gov>

	Merge intels5000pal branch.

	* libfreeipmi/interpret/: Support sensor Session Audit
	intepretation.  Convert default state of
	IPMI_Session_Audit_Invalid_Username_Or_Password from Critical to
	Warning.  Support Voltage Limit sensors.  Support SMI timeout on
	Intel S5000PAL motherboard.

	* man/, etc/: Upate appropriately.
	
2012-03-12  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem-supermicro.c
	(ipmi_oem_supermicro_get_bmc_services_status,
	ipmi_oem_supermicro_set_bmc_services_status): Fix error message
	output.
	
2012-03-06  Albert Chu <chu11@llnl.gov>

 	* libfreeipmi/api/, libfreeipmi/cmds/: Support set sensor reading