@@ -1,7 +1,8 @@
 2012-04-21  Albert Chu <chu11@llnl.gov>
 
 	* bmc-watchdog/bmc-watchdog.c (_daemon_cmd): Handle SIGQUIT in
-	addition to SIGTERM and SIGINT.  Code cleanup.
+	addition to SIGTERM and SIGINT.  Properly set umask before writing
+	pidfile.  Code cleanup.
 	
 2012-04-19  Albert Chu <chu11@llnl.gov>
 
